Added partial user functionality.
