# backend/src/users/dto/create-user.dto.ts
@@ -1,0 +1,13 @@
+import { IsEmail, IsString } from "class-validator";
+
+export class CreateUserDto {
+    @IsString()
+    displayName: string
+
+    @IsEmail()
+    email: string
+
+    // TODO: Add password strength validation
+    @IsString()
+    password: string
+}
